--- a/apps/reward-page/package.json
+++ b/apps/reward-page/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@blockscout/app-sdk": "^0.1.2",
+    "ethers": "^6.15.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
