--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,8 +2,10 @@
   "name": "@py-ext/contracts",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "compile": "hardhat compile",
+    "build": "hardhat build",
+    "compile": "hardhat build",
     "clean": "hardhat clean",
     "deploy:factory": "hardhat run scripts/deploy-factory.ts --network sepolia"
   },
@@ -12,9 +14,20 @@
     "ethers": "^6.14.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.26.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "@nomicfoundation/hardhat-ethers": "^4.0.0",
+    "@nomicfoundation/hardhat-ethers-chai-matchers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-keystore": "^3.0.0",
+    "@nomicfoundation/hardhat-mocha": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-typechain": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^3.0.0",
+    "@nomicfoundation/ignition-core": "^3.0.0",
+    "@types/node": "^22.8.5",
+    "chai": "^5.1.2",
+    "hardhat": "^3.0.0",
+    "typescript": "~5.8.0"
   }
 }
