--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ES2021",
     "outDir": "dist",
     "types": ["node", "hardhat"]
